Fixed Issue where blog image was not displaying correctly on mobile.

--- a/styles.css
+++ b/styles.css
@@ -259,3 +259,10 @@ footer {
   font-style: italic;
   line-height: 1.4;
 }
+
+.blog-image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto 10px auto;
+}
